<resources>
    <string name="app_name">PhotoTor</string>
    <string name="login">התחברות</string>
    <string name="register">הרשמה</string>
    <string name="save">שמירה</string>
    <string name="enterMail">הכנס כתובת מייל</string>
    <string name="enterPass">הכנס סיסמא</string>
    <string name="firstName">שם פרטי</string>
    <string name="lastName">שם משפחה</string>
    <string name="phoneNum">מספר טלפון</string>
    <string name="city">עיר מגורים</string>
    <string name="exit">יציאה</string>
    <string name="photographer">צלם</string>
    <string name="client">לקוח</string>
    <string name="make_an_order">make_an_order</string>
    <string name="area">Area</string>
    <string name="dialog_title">Area Chocsis</string>
    <string name="ok_label">OK</string>
    <string name="dismiss_label">Dismiss</string>
    <string name="clear_all_label">clear all</string>
    <string name="next">next</string>
    <string name="photographers_search">חיפוש צלם</string>
    <string name="photographers_list">כל הצלמים</string>
    <string name="name">שם</string>
    <string name="dial">חייג</string>
    <string name="disconnect">התנתק</string>
    <string name="mangClendar">ניהול יומן</string>
    <string name="areaSelect">בחירת אזורי עבודה</string>
    <string name="eventSelect">בחירת סוגי עבודות</string>
    <string name="orders">הזמנות</string>
    <string name="notrh">צפון</string>
    <string name="sharon">שרון</string>
    <string name="shomron">שומרון</string>
    <string name="jerusalem">ירושלים</string>
    <string name="south">דרום</string>
    <string name="central">מרכז</string>
    <string name="webSiteAndSocial">אתר אישי ורשתות חברתיות</string>
    <string name="search">חיפוש</string>


    <string-array name="Area">
        <item>צפון</item>
        <item>דרום</item>
        <item>מרכז</item>
        <item>שרון</item>
        <item>שומרון</item>
        <item>ירושלים</item>
    </string-array>

    <string-array name="eventsTypes">
        <item>צילומי זוגיות ומשפחה</item>
        <item>צילום וידאו</item>
        <item>צילום אובייקטים</item>
        <item>צילום אירועים</item>
        <item>מגנטים לאירועים</item>
        <item>צילומי סטודיו</item>
        <item>צילומי רחפן</item>
    </string-array>

    <string name="title_activity__photo_rigister">Settings</string>

    <!-- Preference Titles -->
    <string name="messages_header">Messages</string>
    <string name="sync_header">Sync</string>

    <!-- Messages Preferences -->
    <string name="signature_title">Your signature</string>
    <string name="reply_title">Default reply action</string>

    <!-- Sync Preferences -->
    <string name="sync_title">Sync email periodically</string>
    <string name="attachment_title">Download incoming attachments</string>
    <string name="attachment_summary_on">Automatically download attachments for incoming emails
    </string>
    <string name="attachment_summary_off">Only download attachments when manually requested</string>
</resources>
